--- a/index.html
+++ b/index.html
@@ -6,8 +6,47 @@
         </title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
+        <style>
+            h1{
+                background-color: chartreuse;
+                color: gray;
+                height: 80px;
+                width: 800px;
+            }
+            p{
+                background-color:azure;
+                color:darkblue;
+                padding: 0.5em;
+                margin: 10px;
+                font-size: 15px;
+                font-family: 'Times New Roman', Times, serif;
+                width: 50%;
+            }
+            table{
+                height: 100px;
+                width: 1000px;
+                border: 10px solid chartreuse;
+                padding: 20px;
+                margin: 30px;
+            }
+            body{
+                background-image: url(https://play-lh.googleusercontent.com/1-hPxafOxdYpYZEOKzNIkSP43HXCNftVJVttoo4ucl7rsMASXW3Xr6GlXURCubE1tA=w3840-h2160-rw);
+                background-repeat: no-repeat;
+                background-size: 100%;
+                background-position:center;
+            }
+            .secc-azul {
+                background-color:cadetblue;
+                padding: 20px;
+            }
+            #sec{
+                background-color: brown;
+                color: aliceblue;
+                padding: 30px;
+            }    
+        </style>
     </head>
-    <body style="background-color:beige">
+    <body style="background-color:white">
         <header>
             <h1>
                 Desarrollo Web
@@ -17,7 +56,7 @@
             </P>
         </header>
         <main>
-            <section>
+            <section class="secc-azul">
                 <h2>HTML</h2>
                 <p> Hyper Markup Language (HTML), es un lenguaje de marcado cuyas caracteristicas son...</p>
                 <h2> Sintaxis HTML</h2>
@@ -26,7 +65,7 @@
                     Contentido
                 <P> &lt; /nombre &gt;  </P>
             </section>
-            <section>
+            <section class="secc-azul">
                 <h2> Estuctura básica</h2>
                 <p> &lt; !DOCTYPE html &gt; </p>
                 <p> &lt; HTML &gt; </p>
@@ -35,8 +74,6 @@
                 <p> &lt; BODY &gt; </p>
                 <p> &lt; /BODY &gt; </p>
                 <p> &lt; /HTML &gt; </p>
-
-
             </section>
             <section>
                 <h2> Elemntos basicos de HTML</h2>
@@ -106,15 +143,20 @@
                             img
                         </td>
                         <td>
-                            src 
-                        </td>
+                            <span style="color:deepskyblue"> img </span> <span style="color:white"> = </span> <span style="color:brown"> "" </span>                        </td>
                         <td>
-                            <img src="">
+                            <img src="img/mx.jpg" height="40%" width="20%">
                         </td>
                     </tr>
                     <tr>
                         <td>
                             Video
+                        </td>
+                        <td>
+                            video
+                        </td>
+                        <td>
+                            <span style="color:deepskyblue"> img </span> <span style="color:white"> = </span> <span style="color:brown"> "" </span>                        </td>
                         </td>
                     </tr>
                     <tr>
@@ -124,20 +166,63 @@
                     </tr>
                     <tr>
                         <td>
+                            Lista no ordenada
+                        </td>
+                        <td>
                             ul, li
+                        </td>
+                        <td>
+                            -
+                        </td>
+                        <td>
+                            <ul>
+                                <li> Manzana </li>
+                                <li> Uva </li>
+                                <li> Platano </li>
+                                <li> Fesa </li>
+                                <li> Pera </li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
+                        <td>
+                            Lista ordenada
+                        </td>
                         <td>
                             ol, li
                         </td>
+                        <td>
+                            -
+                        </td>
+                        <td>
+                            <ol>
+                                <li> Manzana </li>
+                                <li> Uva </li>
+                                <li> Platano </li>
+                                <li> Fesa </li>
+                                <li> Pera </li>
+                            </ol>
+                        </td>
                     </tr>
                     <tr>
                         <td>
+                            Tabla
+                        </td>
+                        <td>
                             table, tr, td
+                        </td>
+                        <td>
+                            -
                         </td>
                     </tr>
                 </table>
+            </section>
+            <section id="sec">
+                <h2> Lenguaje CSS </h2>
+                <p> selector { </p>
+                    <p> propiedad: valor; </p>
+                    <p> propiedad2: valor2; </p>
+                <p>}</p>
             </section>
         </main>
         </main>
