--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <nav>
                 <ul>
                     <li> <a href="#"> HTML </a></li>
-                    <li> <a href="HTML/lenguajecss.html"> CSS </a></li>
+                    <li> <a href="HTML/lenguajecss.html" target="_blank"> CSS </a></li>
                     <li> <a href="#"> Javascript </a></li>
                 </ul>
             </nav>
