--- a/pagina/index.html
+++ b/pagina/index.html
@@ -6,93 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .titulo {
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-            width: 100%;
-            height: 10%;
-            border: 5px;
-
-        }
-
-        h1 {
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-            width: 50%;
-            height: 10%;
-            border: 5px solid red;
-
-        }
-
-        .menu {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        nav li {
-            height: 10%;
-            width: 10%;
-            margin: 2em;
-            border: 5px solid red;
-            padding: 4em;
-            border-radius: 20%;
-            display: inline-block;
-            background-color:gainsboro ;
-            text-align: center;
-        }
-
-        .mitad {
-            width: 96%;
-            height: 60%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            margin: 1em;
-            border: 5px solid red;
-            padding: 1em;
-        }
-
-        .t1 {
-            width: 50%;
-            height: 800px;
-
-            margin: 2em;
-            border: 5px solid red;
-            padding: 5em;
-            box-sizing: border-box;
-        }
-
-        .h2 {
-            margin: 1em;
-            border: 2px solid red;
-            padding: 1em;
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-
-        }
-
-        .formulario {
-            margin: 2em;
-            border: 2px solid red;
-            padding: 5em;
-        }
-
-        footer {
-            margin: 1em;
-            border: 2px solid red;
-            padding: 4em;
-        }
-
-        body {
-            background-color: black;
-            color: white;
-        }
-    </style>
+    <link href="css/style.css" rel="stylesheet"> 
 </head>
 
 <body>
